--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   avatar           : "profile.png"
   name             : "Eemeli Jalonen"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "Pieni kuvaus"
   location         : "Finland"
   employer         : "Red Brick University"
   uri              : # URL
