--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "profile_uusi.png"
   name             : "Eemeli Jalonen"
   pronouns         : # example: "she/her"  
   bio              : "Pieni kuvaus"
